<resources>
    <string name="app_name">DDAssistant</string>
    <string name="password">Password</string>
    <string name="nombre">Nombre</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="Nombre" />
    <string name="Password" />
    <string name="logo">Logo</string>
    <string name="usuario">Usuario</string>
    <string name="email">Email</string>
    <string name="volver">Volver</string>
    <string name="ingrese_sus_datos">Ingrese sus Datos</string>
    <string name="grabar_audio">Grabar Audio</string>
    <string name="grabar">Grabar</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="media">Media</string>
    <string name="localizacion">Localizacion</string>
    <string name="Detener" />
    <string name="detener">Detener</string>
    <string name="resumir">Resumir</string>
    <string name="pausar">Pausar</string>
    <string name="seleccionar_fecha">Seleccionar Fecha</string>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="titulo">Titulo</string>
    <string name="lugar">Lugar</string>
    <string name="descripcion">Descripcion</string>
    <string name="calendario">CALENDARIO</string>
    <string name="privado">Privado</string>
    <string name="seleccionar_hora">Seleccionar Hora</string>
    <string name="hora_de_inicio">Hora de Inicio</string>
    <string name="fecha_de_inicio">Fecha de Inicio</string>
    <string name="tirar_dados">Tirar Dados</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="dados">DADOS</string>
    <string name="reproductor_de_sonido">REPRODUCTOR DE SONIDO</string>
</resources>